Fixed contact page layout not adjusting correctly on smaller screens

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -86,6 +86,7 @@
   #contact {
     &-a {
       .text-fields {
+        grid-template-columns: 1fr;
         grid-template-areas:
           "name"
           "subject"
